Prevent resize of textarea. Prevent flickering on enter. Add borders to the size calculation. Switch to eventListener. Allow to shrink size in case of text removal.

--- a/src/styles/h5p-dictation.css
+++ b/src/styles/h5p-dictation.css
@@ -122,6 +122,7 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   white-space: break-spaces;
+  resize: none;
 }
 .h5p-dictation .h5p-text-input.hide {
   display: none;
